@@ -1,3 +1,7 @@
+2002-01-27  Per Winkvist  <nd96pwt@student.hig.se>
+
+	* Add option to tune ATS11 "tone duration".
+
 2002-01-22  Per Winkvist  <nd96pwt@student.hig.se>
 
 	* Make "Connect To" button default.
